[project]
name = "GJ625-plotting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blimpy>=2.1.4",
    "matplotlib>=3.10.6",
    "numpy>=2.4.3",
    "scienceplots>=2.2.1",
    "tqdm>=4.67.3",
    "your>=0.6.7",
    "sigpyproc @ git+https://github.com/FRBs/sigpyproc3 ",
    "setuptools<80",
]
